--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "pytorch-cnn-visualizations"
 version = "0.1.0"
 description = ""
-authors = ["extreme-ojisan <40806828+extreme-ojisan@users.noreply.github.com>"]
+authors = 
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -12,3 +12,6 @@ python = "^3.07"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.source]
+include = ["src"]
